# mech-mind

./: .arclint  .clang-format  .gitignore  GIT_PUSH_GUIDE.md  README.md  build.sh  format_and_lint.sh
device_center/include/: DeviceClient.hpp  DeviceServer.hpp  DeviceTypes.hpp
include/: Array2D.h  CommonTypes.h  ErrorStatus.h  UserSetManager.h  Version.h  VirtualUserSet.h
include/area_scan_3d_camera/: Camera.h  CameraEvent.h  CameraProperties.h  Frame2D.h  Frame2DAnd3D.h  Frame3D.h  HandEyeCalibration.h  Mapping2DToDepth.h  ParameterInclude.h
include/area_scan_3d_camera/parameters/: PointCloudProcessing.h  Uhp.h
include/deprecated/: CaptureUtil.h  MechEyeFrame.hpp  MechEyeSettings.h  OpenCVUtil.h  SampleUtil.h
include/profiler/: ProfileData.h  Profiler.h  ProfilerInfo.h  VirtualProfiler.h  api_util.h
include/profiler/calibration/: ProfilerCalibrationInterfaces.h  ProfilerCalibrationTypes.h
include/profiler/parameters/: ProfileExtractionParameters.h  ProfileProcessingParameters.h
lib/: libpcl_features.so.1.8  libpcl_io.so.1.8  libpcl_kdtree.so.1.8  libpcl_search.so.1.8
lib/pkgconfig/: MechEyeApi.pc
perception_app/: CMakeLists.txt  README.md
perception_app/binary/: CMakeLists.txt  client_node_example.cpp  master_node_example.cpp  perception_app_main.cpp
perception_app/communication/: CommunicationInterface.cpp  CommunicationInterface.hpp  CommunicationManager.cpp  CommunicationManager.hpp
perception_app/config/: communication_config.json  config.json  inference_config.json
perception_app/device_center/: CMakeLists.txt
perception_app/device_center/config/: client_config.json  server_config.json
perception_app/device_center/include/: DeviceClient.hpp  DeviceCommunicationAdapter.hpp  DeviceManager.hpp  DeviceServer.hpp  DeviceTypes.hpp
perception_app/device_center/src/: DeviceClient.cpp  DeviceCommunicationAdapter.cpp  DeviceManager.cpp  DeviceServer.cpp  DeviceUtils.cpp  client_app.cpp  server_app.cpp
perception_app/doc/: CommunicationArchitecture.md  DevelopmentGuide.md  InferenceInterface.md  NetworkDeployment.md  README.md  charging.html
perception_app/examples/: NetworkInferenceExample.cpp
perception_app/include/: InferenceInterface.hpp  Logger.hpp
perception_app/inference/: ExampleInference.cpp  ExampleInference.hpp  InferenceInterface.hpp
perception_app/message/: MessageProtocol.hpp
perception_app/runtime/: CameraInfo.cpp  CameraManager.cpp  main.cpp
perception_app/runtime/adapter/: CMakeLists.txt
perception_app/runtime/adapter/client_node/: ClientNode.cpp  ClientNode.hpp
perception_app/runtime/adapter/examples/: client_node_example.cpp  master_node_example.cpp
perception_app/runtime/adapter/master_node/: MasterNode.cpp  MasterNode.hpp
perception_app/runtime/camera/: CMakeLists.txt  CameraManager.cpp  FrameSet.cpp  InferenceManager.cpp
perception_app/runtime/camera/utils/: CVWindow.cpp  UtilHelper.h
perception_app/runtime/communication/: CMakeLists.txt  CommunicationInterface.cpp  CommunicationInterface.hpp  CommunicationManager.cpp  CommunicationManager.hpp
perception_app/runtime/communication/discovery/: UdpServiceDiscovery.cpp  UdpServiceDiscovery.hpp
perception_app/runtime/communication/endpoints/: ARCHITECTURE_SUMMARY.md  CMakeLists.txt
perception_app/runtime/communication/endpoints/clients/: EndpointClient.cpp  EndpointClient.hpp
perception_app/runtime/communication/endpoints/servers/: EndpointServer.cpp  EndpointServer.hpp
perception_app/runtime/communication/endpoints/services/: EndpointService.cpp  EndpointService.hpp  ServiceInspector.cpp  ServiceInspector.hpp
perception_app/runtime/communication/interfaces/: ConnectionTypes.hpp  IEndpointService.hpp  ITransport.hpp
perception_app/runtime/communication/transports/: AsioTransport.cpp  AsioTransport.hpp  TransportInspector.hpp
perception_app/runtime/configure/: ConfigHelper.cpp  ConfigHelper.hpp
perception_app/runtime/core/: CameraManager.cpp  CameraManager.hpp  FrameSet.cpp
perception_app/runtime/core/utils/: CVWindow.cpp
perception_app/runtime/message/: CMakeLists.txt  IMessageProtocol.hpp  MessageProtocol.cpp  MessageProtocol.hpp  PerceptionMessages.hpp  ProtocolDefinitions.cpp  ProtocolDefinitions.hpp
perception_app/runtime/utils/: UtilHelper.h
samples/cpp/area_scan_3d_camera/perception_app/: CMakeLists.txt  CameraInfo.hpp  CameraManager.cpp  CameraManager.hpp  ConfigHelper.cpp  ConfigHelper.hpp  FrameSet.hpp  PERFORMANCE_FIX.md  README_DISPLAY.md  main.cpp
samples/cpp/area_scan_3d_camera/perception_app/config/: config.json
samples/cpp/area_scan_3d_camera/perception_app/utils/: CVWindow.cpp  CVWindow.hpp  Logger.hpp  UtilHelper.h
